# tradesight

./: .gitignore  AUDIT_2026-03-11.md  AUDIT_2026-04-13.md  BUGS.md  BUILDER_BRIEFING_PHASE1.md  CIRCUIT_BREAKER_SPEC.md  CONFLUENCE_BLOCKERS.md  LOGO.txt  LOGO_DESIGN.txt  NEXT_TASKS.md  PREFLIGHT_PHASE1_20260320.md  README.md  START_TRADESIGHT.py  STATUS_20260311.md  TRADING_LOG.md  WEBSOCKET_REVIEW_1191.md  icon.icns  index.html  intro_demo.ipynb  launch_tradesight.sh  pyproject.toml  requirements.txt  run_paper_trader.py  run_scan.sh  simple_test_fix.py  simple_test_launch.py  tradesight_bias_audit.md  verify_indicators.py
.github/: FUNDING.yml
audits/: PUSH_NOTIF_INTEGRATION_2026-03-12.md  audit_20260323.md  morning_report_check.txt  paper_trader_audit_20260314_1910.md  rsi_signal_audit_20260314.md
blog/: april-week1-2026.html
data/: champion.json  feedback.db  positions.db  tournament_history.db  tournament_history.db.archived_20260317  trades.db  tradesight.db
docs/: AWESOME_LIST_SUBMISSIONS.md  DEVTO_ARTICLE.md  DEVTO_TOURNAMENT_ARTICLE.md  DIRECTORY_SUBMISSIONS.md  GUMROAD_LISTING.md  HN_REVIEW.md  IH_POST.md  LANDING_COPY_EDITS.md  LIVE_READINESS.md  PH_ASSETS.md  REDDIT_COMMENTS.md  REDDIT_POSTING_PLAN.md  TRADESIGHT_SHOWHN.md  TWITTER_LAUNCH_THREAD.md  feed.xml  index.html  robots.txt  sitemap.xml  vibe-code-rescue.html
reports/: daily_20260310.txt  optimization_20260301_220200.json  optimization_20260304_155824.json  optimization_20260304_221947.json  optimization_20260305_095818.json  optimization_20260305_200015.json  optimization_20260306_200010.json  optimization_20260307_200010.json  optimization_20260308_200027.json  (+56 more)
(+100 files in other folders)
